// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/organisms/Modal Modal Form 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c10 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c9 {
  font-size: 1rem;
  font-weight: 600;
  color: rgb(33,18,94);
  background: transparent;
  outline: none;
  border: none;
  box-shadow: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0;
  -webkit-transition: color 0.3s ease;
  transition: color 0.3s ease;
}

.c9:hover {
  color: #513CA3;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c8 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 button:nth-child(2) {
  margin-left: 2rem;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 2.5rem;
}

.c7 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 5;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(35,33,43,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

@media (max-width:540px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c8 button:nth-child(2) {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <svg
              className="fa-cursor-pointer overlay__header__close-icon"
              color="#452FBA"
              fill="#452FBA"
              height={32}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
              />
            </svg>
          </div>
          <div
            className="c7"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c8"
          >
            <button
              className="c9"
              color="secondary"
              onClick={[Function]}
              size="md"
              type="button"
            >
              Cancel
            </button>
            <button
              className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-bg-primary-medium fa-text-white hover:fa-bg-primary-darkest focus:fa-bg-primary-light fa-h-10 fa-px-3"
              disabled={false}
              form="form-id"
              style={Object {}}
              type="submit"
            >
              <span
                className="fa-align-middle fa-ml-2"
              >
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c10"
  />
</div>
`;

exports[`Storyshots @components/organisms/Modal Modal Form disabled 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c9 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c8 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 button:nth-child(2) {
  margin-left: 2rem;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 2.5rem;
}

.c7 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 5;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(35,33,43,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

@media (max-width:540px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c8 button:nth-child(2) {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <svg
              className="fa-cursor-pointer overlay__header__close-icon"
              color="#452FBA"
              fill="#452FBA"
              height={32}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
              />
            </svg>
          </div>
          <div
            className="c7"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c8"
          >
            <button
              className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-h-10 fa-px-3 fa-bg-neutral-medium fa-text-white fa-cursor-not-allowed"
              disabled={true}
              form="modal-submit"
              style={Object {}}
              type="submit"
            >
              <span
                className="fa-align-middle fa-ml-2"
              >
                Loading
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c9"
  />
</div>
`;

exports[`Storyshots @components/organisms/Modal Modal Info 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c9 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.1rem 1.875rem 0.5rem 1.875rem;
}

.c6 {
  font-size: 1rem;
  font-weight: 600;
  color: #323232;
  text-transform: camelcase;
  padding-right: 0.6rem;
  margin: 0;
  margin-top: 2rem;
}

.c8 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.5rem 1.875rem;
}

.c8 button {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c8 button:nth-child(2) {
  margin-left: 2rem;
}

.c3 {
  height: 100vh;
  padding-top: 3rem;
  width: 100%;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 28rem;
  max-width: 100%;
  max-height: 98%;
  z-index: 1000;
  padding-bottom: 2rem;
  overflow-y: auto;
  background-color: #fff;
  margin-left: auto;
  margin-right: auto;
  border-radius: 2.5rem;
}

.c7 {
  padding: 0rem 1.875rem 0rem 1.875rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 555px;
  height: auto;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  overflow-y: auto;
  width: 100%;
  height: 100%;
  min-height: 100%;
  top: 0;
  z-index: 5;
  -webkit-transition: opacity 0.2s ease;
  transition: opacity 0.2s ease;
  -webkit-transition-delay: 0;
  transition-delay: 0;
  background-color: rgba(35,33,43,0.8);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  opacity: 1;
}

@media (max-width:540px) {
  .c8 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (max-width:540px) {
  .c8 button:nth-child(2) {
    margin-left: 0;
  }
}

@media (max-width:540px) {
  .c3 {
    padding-top: 0rem;
  }
}

@media (max-width:540px) {
  .c4 {
    width: 88%;
    margin-top: 0.3125rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    open={true}
  >
    <div
      className="c2"
      id="lightbox-modal"
      onClick={[Function]}
      open={true}
    >
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <h4
              className="c6"
              size="md"
            >
              Modal title
            </h4>
            <svg
              className="fa-cursor-pointer overlay__header__close-icon"
              color="#452FBA"
              fill="#452FBA"
              height={32}
              onClick={[Function]}
              viewBox="0 0 24 24"
              width={32}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.0002 1.94995C6.4602 1.94995 1.9502 6.45995 1.9502 12C1.9502 17.54 6.4602 22.0499 12.0002 22.0499C17.5402 22.0499 22.0502 17.54 22.0502 12C22.0502 6.45995 17.5402 1.94995 12.0002 1.94995ZM15.5402 14.12C15.9302 14.51 15.9302 15.14 15.5402 15.53C15.3402 15.73 15.0902 15.82 14.8302 15.82C14.5702 15.82 14.3202 15.72 14.1202 15.53L12.0002 13.41L9.8802 15.53C9.6802 15.73 9.4302 15.82 9.1702 15.82C8.9102 15.82 8.6602 15.72 8.4602 15.53C8.0702 15.14 8.0702 14.51 8.4602 14.12L10.5902 12L8.4602 9.87995C8.0702 9.48995 8.0702 8.85995 8.4602 8.46995C8.8502 8.07995 9.4802 8.07995 9.8702 8.46995L12.0002 10.59L14.1202 8.46995C14.5102 8.07995 15.1402 8.07995 15.5302 8.46995C15.9202 8.85995 15.9202 9.48995 15.5302 9.87995L13.4102 12L15.5402 14.12Z"
              />
            </svg>
          </div>
          <div
            className="c7"
          >
            <div>
              Content
            </div>
          </div>
          <div
            className="c8"
          >
            <button
              className="fa-rounded-3xl focus:fa-outline-none fa-align-middle fa-text-center fa-bg-primary-medium fa-text-white hover:fa-bg-primary-darkest focus:fa-bg-primary-light fa-h-10 fa-px-3"
              disabled={false}
              form="modal-submit"
              onClick={[Function]}
              style={Object {}}
              type="submit"
            >
              <span
                className="fa-align-middle fa-ml-2"
              >
                OK
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="c9"
  />
</div>
`;
